<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.CategoryEditActivity">

    <EditText
        android:id="@+id/category_title_caption"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/name_caption"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/category_title"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:ellipsize="end"
        android:hint="@string/title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toEndOf="@id/category_title_caption"
        app:layout_constraintTop_toTopOf="@id/category_title_caption"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/rv_plans_caption"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/plans_in_category"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/category_title_caption"
        app:layout_constraintTop_toBottomOf="@id/category_title_caption"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_plans"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingBottom="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/rv_plans_caption"
        app:layout_constraintTop_toBottomOf="@id/rv_plans_caption"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/category_save"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_buttons"
        android:onClick="categorySave"
        app:icon="@android:drawable/ic_menu_save"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_title"
        app:layout_constraintVertical_bias="0.806" />

    <Button
        android:id="@+id/category_delete"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_buttons"
        android:onClick="categoryDelete"
        app:icon="@android:drawable/ic_menu_delete"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_title"
        app:layout_constraintVertical_bias="0.989" />

</androidx.constraintlayout.widget.ConstraintLayout>